--- a/sanity.toml
+++ b/sanity.toml
@@ -1,2 +1,2 @@
-expected_remote_lang_dir = '/common/destiny_content/sqlite/',
+expected_remote_lang_dir = '/common/destiny_content/sqlite/'
 expected_mf_name_pattern = "^world_sql_content_[a-fA-F0-9]{32}.content$"
