--- a/d2_project/config/settings.toml
+++ b/d2_project/config/settings.toml
@@ -1,7 +1,7 @@
 # _expected_mf_name_template_str = "^${starts_with}[a-fA-F0-9]{32}${extension}$$"
 # mf_extension = ".content"
 # mf_starts_with = "world_sql_content_"
-# mf_zip_structure = { expected_dir_count = 0, expected_file_count = 1 }
+# mf_zip_structure = { expected_file_count = 1, expected_dir_count = 0 }
 # mf_finder_url = "https://www.bungie.net/Platform/Destiny/Manifest"
 # mf_loc_base_url = "https://www.bungie.net"
 # mf_lang = "en"
