moved expected_bungie_response_data_fields to d2_project_config.Sanity

--- a/d2_project/config/sanity.toml
+++ b/d2_project/config/sanity.toml
@@ -1,1 +1,9 @@
 # expected_remote_lang_dir = "/common/destiny_content/sqlite/"
+# expected_bungie_response_data_fields = [
+#   "ErrorCode",
+#   "ThrottleSeconds",
+#   "ErrorStatus",
+#   "Message",
+#   "MessageData",
+#   "Response",
+# ]
